# sem1_c_task2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  functionality.c  functionality.h  main.c  test.cpp
